# playground

blender/: addon_example.py  amature_mesh.py  makehuman.md  pyui.md  simple_draw.py
pyboost/: CMakeLists.txt
pyboost/greet/: CMakeLists.txt  greet.cpp  greet_ext.cpp
